objects/copado__MC_Custom_Job_Step__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__CustomType__c</fullName>
        <label>Custom Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__LWC_Name__c</fullName>
        <label>LWC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MC Custom Job Step</label>
    <pluralLabel>MC Custom Job Steps</pluralLabel>
</CustomObject>